# ros2-tutorial

./: vscode-server_setting_path.txt  vscode_settings.json
bags/rosbag2_2024_03_21-11_11_08/: metadata.yaml  rosbag2_2024_03_21-11_11_08_0.db3
bags/test/: metadata.yaml  test_0.db3
bumperbot/bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot/bumperbot_controller/bumperbot_controller/: simple_controller.py
bumperbot/bumperbot_controller/config/: controllers.yaml  joystick.yaml
bumperbot/bumperbot_controller/include/bumperbot_controller/: simple_controller.hpp
bumperbot/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
bumperbot/bumperbot_controller/src/: simple_controller.cpp
bumperbot/bumperbot_cpp_examples/: CMakeLists.txt  package.xml
bumperbot/bumperbot_cpp_examples/src/: simple_tf_kinematics.cpp
bumperbot/bumperbot_description/: CMakeLists.txt  package.xml
bumperbot/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
bumperbot/bumperbot_description/rviz/: simple_config.rviz
bumperbot/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot/bumperbot_py_examples/: package.xml  setup.py
bumperbot/bumperbot_py_examples/bumperbot_py_examples/: simple_tf_kinematics.py
component_example/actions_cpp/: CMakeLists.txt  package.xml
component_example/actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goals.cpp  move_robot_client.cpp
component_example/actions_py/: package.xml  setup.py
component_example/actions_py/actions_py/: count_until_client.py  count_until_server.py  move_robot_client.py
component_example/components_cpp/: CMakeLists.txt  package.xml
component_example/components_cpp/include/components_cpp/: node1.hpp  node2.hpp  number_publisher.hpp
component_example/components_cpp/src/: manual_composition.cpp  node1.cpp  node2.cpp  number_publisher.cpp
component_example/components_py/: setup.py
component_example/components_py/components_py/: manual_composition.py  node1.py  node2.py
component_example/executors_py/executors_py/: multi_threaded_executor.py
component_example/lifecycle_cpp/: CMakeLists.txt  package.xml
component_example/lifecycle_cpp/src/: move_robot_server.cpp  number_publisher.cpp
component_example/lifecycle_py/: setup.py
component_example/lifecycle_py/lifecycle_py/: lifecycle_node_manager.py  move_robot_server.py  move_robot_startup.py  number_publisher.py
component_example/my_robot_bringup/: CMakeLists.txt  package.xml
component_example/my_robot_bringup/launch/: components.launch.py  components.launch.xml  lifecycle_test.launch.py  lifecycle_test.launch.xml  move_robot.launch.xml
component_example/my_robot_interfaces/: CMakeLists.txt  package.xml
src/actions_cpp/: CMakeLists.txt  package.xml
src/actions_cpp/src/: count_until_client.cpp  count_until_server.cpp  count_until_server_queue_goal.cpp  move_robot_server.cpp
src/actions_py/: package.xml  setup.py
src/actions_py/actions_py/: count_until_client.py  count_until_server.py  move_robot_server.py
src/executors_cpp/src/: multi_threaded_executor.cpp  single_threaded_executor.cpp
src/executors_py/executors_py/: number_publisher.py  single_threaded_executor.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: controllers.yaml  joystick.yaml  nav2_params.yaml
src/my_robot_bringup/launch/: create_map.launch.py  lifecycle_node_test.py  lifecycle_node_test.xml  navigate_demo.launch.py  simple_robot_gazebo.launch.py  simple_robot_gazebo.launch.xml
src/my_robot_bringup/maps/: demomap.pgm  demomap.yaml
src/my_robot_bringup/rviz/: nav2_demo.rviz  simple_robot_car.rviz
src/my_robot_bringup/worlds/: test.world  turtlebot3_house.world  turtlebot3_world.world
src/my_robot_controller/: CMakeLists.txt  package.xml
src/my_robot_controller/src/: main.cpp
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  lidar.xacro  my_robot.urdf.xacro  simple_robot_car.urdf  simple_robot_car.urdf.xacro  simple_robot_car_gazebo.urdf.xacro  vacuum_robot_base.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/my_robot_interfaces/action/: MoveRobot.action
src/polygon_base/: CMakeLists.txt  package.xml  plugins.xml
src/polygon_base/src/: area_node.cpp  nav2_test_node.cpp
src/polygon_plugins/: CMakeLists.txt  package.xml
src/polygon_plugins/include/polygon_plugins/: polygon_plugins.hpp
src/testqt/: CMakeLists.txt  package.xml  qml.qrc
src/testqt/qml/: Main.qml
src/testqt/src/: main.cpp
src/tutorial_bringup/: CMakeLists.txt  package.xml
src/tutorial_bringup/launch/: tutorial.launch.py
src/tutorial_cpp_pkg/: CMakeLists.txt  package.xml
src/tutorial_cpp_pkg/msg/: TestTopic.msg
src/tutorial_cpp_pkg/src/: lifecycle_number_publisher.cpp  service_client.cpp  service_server.cpp  topic_publisher.cpp  topic_subscription.cpp
src/tutorial_cpp_pkg/srv/: TestService.srv
src/tutorial_py_pkg/: package.xml  setup.cfg  setup.py
src/tutorial_py_pkg/tutorial_py_pkg/: lifecycle_node_manager.py  lifecycle_number_publisher.py  service_client.py  service_server.py  topic_publisher.py  topic_subscription.py
urdf/: my_robot.urdf  tutorial_robot.urdf
